<resources>
    <string name="app_name">Saimum Music</string>
    <string name="made_with_in">Popular Islamic Song</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="search">Search</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="recent">Recent</string>
    <string name="all_songs">All Songs</string>
    <string name="artist">Artist</string>
    <string name="albums">Albums</string>
    <string name="recently">Recently</string>
    <string name="favourite">Favourite</string>
    <string name="recently_played">Recently Played</string>
    <string name="news">News</string>
    <string name="playlist">Playlist</string>
    <string name="myplaylist">My Playlist</string>
    <string name="music_library">Music Library</string>
    <string name="downloads">Downloads</string>
    <string name="trending_songs">Trending Songs</string>
    <string name="banner">Banner</string>
    <string name="play_all">Play all</string>
    <string name="tab_text_1">Songs</string>
    <string name="tab_text_2">Playlists</string>
    <string name="tab_text_3">Artist</string>
    <string name="tab_text_4">Albums</string>
    <string name="player_normal">NORMAL</string>
    <string name="player_circle">CIRCLE</string>
    <string name="player_flat">FLAT</string>
    <string name="player_gradient">GRADIENT</string>
    <string name="player_blur">BLUR</string>
    <string name="player_corner">CORNER</string>
    <string name="player_corner_bottom">CORNER BOTTOM</string>
    <string name="title_activity_main2">MusicActivity</string>
    <string name="search_songs">Search Songs</string>
    <string name="search_artist">Search Artist</string>
    <string name="search_albums">Search Albums</string>
    <string name="search_categories">Search Categories</string>
    <string name="search_playlist">Search Playlist</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="logout_success" >Logout Successful</string>
    <string name="new_to_logistics" >New to Logistics?</string>
    <string name="login_with_google" >Login with Google</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="registering">Registering..</string>
    <string name="full_name">Full name</string>
    <string name="telephone_number">Mobile</string>
    <string name="confirm_password" >Confirm Password</string>
    <string name="male">Male</string>
    <string name="female" >Female</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="by_signing_up_re_agree_to_oue">By signing up,re agree to our</string>
    <string name="and">and</string>
    <string name="skip">Skip</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_pass">Forgot Your Password?</string>
    <string name="forgot_password_message">Enter your valid email address below and we will send you email with instructions on how to change your password</string>
    <string name="profile">Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="error_name">Please Enter Name</string>
    <string name="error_email">Please Enter Email</string>
    <string name="error_password">Please Enter Password</string>
    <string name="error_cpassword">Please Enter Confirm Password</string>
    <string name="error_pass_not_match">Confirm Password not matched</string>
    <string name="error_pass_end_space">Please do not add space at end</string>
    <string name="error_password_sort">This password is too shor</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_phone">Enter Phone</string>
    <string name="error_gender">Selected gender</string>
    <string name="error_cannot_use_features">Cannot use some of the features without requested permission</string>
    <string name="error_cannot_empty">Field cannot be empty</string>
    <string name="error_internet_not_connected">Please connect to internet</string>
    <string name="error_try_internet_connected">Please connect to internet and try again</string>
    <string name="error_server_not_connected">Server not connected</string>
    <string name="error_server">Server Error</string>
    <string name="error_unauthorized_access">Unauthorized Access</string>
    <string name="error_login_google">Error while login with google</string>
    <string name="error_no_songs_selected">No Songs Selected</string>
    <string name="error_playing_song">Error Playling Song</string>
    <string name="error_no_songs_found">No Songs Found</string>
    <string name="error_no_data_found">No Data Found</string>
    <string name="error_no_cat_found">No Categories Found</string>
    <string name="error_no_artist_found">No Artist Found</string>
    <string name="error_no_albums_found">No Albums Found</string>
    <string name="error_file_delete">Error deleting file</string>
    <string name="error_no_playlist_found">No Playlist Found</string>
    <string name="select_image">Select Image</string>
    <string name="no_notification">No Notification</string>
    <string name="refresh">Refresh</string>
    <string name="upload_success">Upload Success</string>
    <string name="already_added">Already Added</string>
    <string name="cancel_timer">Cancel Timer</string>
    <string name="select_Timer">Select Timer</string>
    <string name="sure_cancel_timer">Are you sure you want to cancel timer?</string>
    <string name="hh">hour</string>
    <string name="mm">minutes</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="start_timer">Start Timer</string>
    <string name="suggestion">Suggestion</string>
    <string name="enter_your_title_here_suggestion">Enter your title here</string>
    <string name="enter_your_description_here_suggestion">Enter your description here</string>
    <string name="about">About Us</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="love_this_app">Love this app? Let us Know in the Google Play Store how we can make it even better</string>
    <string name="share_the_app">Share the app with your friends and family</string>
    <string name="company">Organization</string>
    <string name="email">Email</string>
    <string name="version">Version</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="more_apps">More Apps</string>
    <string name="tap_to_change_photo">Tap to change photo</string>
    <string name="personal_information">Personal Information</string>
    <string name="account_security">Account Security</string>
    <string name="save_changes">Save Changes</string>
    <string name="settings">Settings</string>
    <string name="app_theme">App Theme</string>
    <string name="dark_or_light_mode">Dark or Light Mode</string>
    <string name="theme_classic">Classic</string>
    <string name="theme_dark_grey">Dark Grey</string>
    <string name="theme_dark_blue">Dark Blue</string>
    <string name="theme_dark">Dark</string>
    <string name="cache">Cache</string>
    <string name="clear_cache">Clear cache data</string>
    <string name="cache_cleared">Cache Cleared</string>
    <string name="clearing_cache">Clearing Cache..</string>
    <string name="this_app_privacy_policy">This app privacy policy</string>
    <string name="social_links">Social links, policy</string>
    <string name="this_app_terms">This app Terms and Conditions</string>
    <string name="now_playing">Now playing</string>
    <string name="customize_your_now_playing">Customize your now playing screen</string>
    <string name="now_playing_theme">Now playing theme</string>
    <string name="customize_your_now_playing_theme">Customize your now playing screen theme</string>
    <string name="lyrics_font_size">Lyrics font size</string>
    <string name="volume_controls">Volume controls</string>
    <string name="show_volume_controls">if enough space is available, show volume controls in the now playing screen</string>
    <string name="snow_fall_effect">Snow fall effect</string>
    <string name="amount_of_blur">Blur applied for themes, lower is faster</string>
    <string name="blur_amount">Blur amount</string>
    <string name="only_support_dark_mode">Only support dark mode</string>
    <string name="your_drive_mode_player_screen">Customize your drive mode player screen</string>
    <string name="audio_quality">Audio Quality</string>
    <string name="customize_audio_quality">Customize audio quality</string>
    <string name="download_audio_quality">Download Audio Quality</string>
    <string name="customize_download_audio_quality">customize download audio quality</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="deletion_policy">Data Deletion Policy</string>
    <string name="completely_delete_you_account">You can completely delete you account</string>
    <string name="notification">Notification</string>
    <string name="to_receive_notification">To receive notification in time</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="sure_exit">Are you sure you want to exit app?</string>
    <string name="upgrade">Upgrade</string>
    <string name="its_time_to_upgrade">Its time to Upgrade to the latest version of our application to get the best experience.</string>
    <string name="do_it_now">DO IT NOW</string>
    <string name="maintenance">Maintenance</string>
    <string name="temporarily_down_for_maintenance">Temporarily Down for Maintenance</string>
    <string name="we_are_performing_scheduled">we are performing scheduled maintenance. we should be back online shortly.</string>
    <string name="try_again_later">Try again later</string>
    <string name="sure_delete_playlist">Are you sure you want to delete this playlist?</string>
    <string name="sure_delete">Are you sure you want to delete this song?</string>
    <string name="remove_from_playlist">Removed from playlist</string>
    <string name="song_add_to_playlist">Song add to playlist -</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="remove_playlist">Playlist removed</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="add">ADD</string>
    <string name="playlist_added">Playlist Added</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="submit">Submit</string>
    <string name="subscription_plan">Subscription Plan</string>
    <string name="premium_note">With our pack. You can enjoy an ad-free experience!</string>
    <string name="premium_a_title">Premium Songs</string>
    <string name="premium_a_note">Unlimited Songs</string>
    <string name="premium_b_title">Adblock</string>
    <string name="premium_b_note">Use app more free without ads</string>
    <string name="subscribe_now">SUBSCRIBE NOW</string>
    <string name="todo">TODO</string>
</resources>