<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_25sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_1sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/todo"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_library_music"
                app:tint="?nsTitle" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/_9sdp"
                android:text="@string/add_to_playlist"
                android:textColor="?nsTitle"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_playlist_close"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bar_selector"
                android:contentDescription="@string/todo"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_close_page"
                app:tint="?nsTitle" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_dialog_playlist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_empty_dialog_pl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/error_no_playlist_found"
            android:textColor="?nsTitle"
            android:textSize="@dimen/_15ssp"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/ll_add_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <EditText
                android:id="@+id/et_playlist_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="?nsTitle"
                android:hint="@string/enter_playlist_name"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/add"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/_5sdp"
                app:backgroundTint="?nsPrimary" />

        </LinearLayout>

        <TextView
            android:layout_margin="@dimen/_5sdp"
            android:id="@+id/button_dialog_addplaylist"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/btn_primary"
            android:gravity="center"
            android:text="@string/create_new_playlist"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

</RelativeLayout>