<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_15sdp"
    android:background="@drawable/bg_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_now_playing_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="?nsTitle"
            android:textStyle="bold"
            android:text="@string/now_playing_theme" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/now_playing_screen_view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"/>

        <com.nemosofts.ui.PageIndicatorView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            app:piv_animationType="worm"
            app:piv_dynamicCount="true"
            app:piv_interactiveAnimation="true"
            app:piv_padding="5dp"
            app:piv_radius="5dp"
            app:piv_selectedColor="?nsPrimary"
            app:piv_unselectedColor="?nsTitleSub"
            app:piv_viewPager="@id/now_playing_screen_view_pager" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_danger"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="?nsWhite"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tv_submit_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_primary"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="?nsWhite"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>